<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.habitathelpers.LoginActivity"
    android:id="@+id/mainAct"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

        <FrameLayout
            android:id="@+id/mainContainer"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@id/scrollView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/const2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_account"
                        android:id="@+id/createAccount"
                        android:textSize="40sp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="20dp"
                        android:layout_centerHorizontal="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        />


                    <EditText
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:autofillHints="password"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:id="@+id/edit_text_password"
                        app:layout_constraintBottom_toTopOf="@id/login"
                        android:layout_marginBottom="40dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:hint="@string/enter_your_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:layout_marginTop="80dp"
                        android:padding="14dp"
                        android:textColor="#616161"
                        android:textColorHint="#AEAEAE"
                        android:textSize="15.3sp"
                        android:layout_below="@+id/createAccount"
                        android:layout_alignParentStart="true" />

                    <EditText
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:autofillHints="emailAddress"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/edit_text_password"
                        android:layout_marginBottom="40dp"
                        android:id="@+id/edit_text_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:hint="@string/enter_your_email"
                        android:inputType="textEmailAddress"
                        android:nextFocusDown="@+id/edit_text_password"
                        android:padding="14dp"
                        android:textColor="#616161"
                        android:textColorHint="#AEAEAE"
                        android:textSize="15.3sp"
                        android:layout_below="@+id/createAccount"
                        android:layout_alignParentStart="true"/>


                    <Button
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/create_user"
                        android:id="@+id/create_user"
                        app:layout_constraintTop_toBottomOf="@id/createAccount"
                        android:layout_centerVertical="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        />


                    <Button
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:id="@+id/login"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@id/create_user"
                        android:layout_marginBottom="10dp"
                        android:text="@string/login" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_main"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
