<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.habitathelpers.LoginActivity"
    android:id="@+id/mainAct"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

        <FrameLayout
            android:id="@+id/mainContainer"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@id/scrollView"
                tools:ignore="UselessParent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/const2">

                    <ImageView
                        android:id="@+id/create_image"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/imagedesc"
                        app:layout_constraintEnd_toStartOf="@+id/head_text"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@mipmap/ic_launcher_foreground" />

                    <TextView
                        android:id="@+id/head_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="22sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/create_image"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/create_activity_banner_text" />

                    <TextView
                        android:id="@+id/details_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="22sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/create_image"
                        android:text="@string/pet_details" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:id="@+id/spec_linear"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/details_text">

                        <TextView
                            android:id="@+id/spec_text"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="22sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:text="@string/species" />

                        <Spinner
                            android:id="@+id/species_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:id="@+id/gen_linear"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/spec_linear">

                        <TextView
                            android:id="@+id/gen_text"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="22sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:text="@string/gender" />

                        <Spinner
                            android:id="@+id/gen_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:id="@+id/age_linear"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/gen_linear">

                        <TextView
                            android:id="@+id/age_text"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="22sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:text="@string/age" />

                        <Spinner
                            android:id="@+id/age_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/hab_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="22sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/age_linear"
                        android:text="@string/habitat_details" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:id="@+id/mat_linear"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/hab_text">

                        <TextView
                            android:id="@+id/mat_text"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="22sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:text="Material: " />

                        <Spinner
                            android:id="@+id/mat_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:id="@+id/sub_linear"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/mat_linear">

                        <TextView
                            android:id="@+id/sub_text"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="22sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:text="@string/substrate" />

                        <Spinner
                            android:id="@+id/sub_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="horizontal"
                        android:id="@+id/size_linear"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sub_linear">

                        <TextView
                            android:id="@+id/size_text"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="22sp"
                            app:layout_constraintEnd_toStartOf="@+id/len_spinner"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:text="@string/size" />

                        <Spinner
                            android:id="@+id/len_spinner"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/size_text"
                            app:layout_constraintTop_toTopOf="parent"
                            />

                        <TextView
                            android:id="@+id/x1_text"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="22sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/len_spinner"
                            app:layout_constraintTop_toBottomOf="parent"
                            android:text="@string/x" />

                        <Spinner
                            android:id="@+id/wid_spinner"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"

                            app:layout_constraintStart_toEndOf="@+id/x1_text"
                            app:layout_constraintTop_toTopOf="parent"
                            />

                        <TextView
                            android:id="@+id/x2_text"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="22sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/wid_spinner"
                            app:layout_constraintTop_toBottomOf="parent"
                            android:text="@string/x" />

                        <Spinner
                            android:id="@+id/hgt_spinner"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            />

                    </LinearLayout>

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_habitat"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/size_linear"/>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_main"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
